# CloneCord-Bot

./: .env  .flake8  .gitignore  CloneCord-Mac-Linux.py  CloneCord.py  Dockerfile  README.md  app.json  bot.py  config.json  docker-compose.yml  heroku.yml  pyproject.toml  rclone.conf  requirements.txt
accounts/: .accountsinhere
